Add preset warning/critical notices, update translations
